feat: add smart sprite build script and optimize location param generation
- Introduced a new script `smart-sprite-build.ts` to automate the rebuilding of Pokemon and trainer sprites based on file modification times and the availability of Python.
- Enhanced the `generateStaticParams` function in `page.tsx` to normalize location keys and streamline the addition of location names from both Pokemon encounters and comprehensive location data.

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "polisheddex",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node scripts/generate-build-info.mjs && node scripts/smart-sprite-build.js && ./scripts/copy-dex-files.sh && next build",
+    "build": "node scripts/generate-build-info.mjs && node scripts/smart-sprite-build.ts && ./scripts/copy-dex-files.sh && next build",
     "build-full": "node scripts/generate-build-info.mjs && npm run process-sprites && ./scripts/copy-dex-files.sh && next build",
     "start": "next start",
     "lint": "next lint",
