--- a/location-consolidation-mapping.json
+++ b/location-consolidation-mapping.json
@@ -1,5 +1,54 @@
 {
   "consolidationGroups": {
+    "violet_city": [
+      "violet_gym"
+    ],
+    "azalea_town": [
+      "azalea_gym",
+      "azalea_mart"
+    ],
+    "goldenrod_city": [
+      "goldenrod_gym"
+    ],
+    "ecruteak_city": [
+      "ecruteak_gym"
+    ],
+    "cianwood_city": [
+      "cianwood_gym"
+    ],
+    "olivine_city": [
+      "olivine_gym"
+    ],
+    "mahogany_town": [
+      "mahogany_gym"
+    ],
+    "blackthorn_city": [
+      "blackthorn_gym"
+    ],
+    "pewter_city": [
+      "pewter_gym"
+    ],
+    "cerulean_city": [
+      "cerulean_gym"
+    ],
+    "vermilion_city": [
+      "vermilion_gym"
+    ],
+    "celadon_city": [
+      "celadon_gym"
+    ],
+    "saffron_city": [
+      "saffron_gym"
+    ],
+    "fuchsia_city": [
+      "fuchsia_gym"
+    ],
+    "cinnabar_island": [
+      "cinnabar_gym"
+    ],
+    "viridian_city": [
+      "viridian_gym"
+    ],
     "celadon_dept_store": [
       "celadon_dept_store_1f",
       "celadon_dept_store_2f",
@@ -305,44 +354,11 @@
       "route_2_nugget_speech_house"
     ]
   },
-  "gymLeaderIntegrations": {
-    "violet_gym": ["falkner"],
-    "azalea_gym": ["bugsy"],
-    "goldenrod_gym": ["whitney"],
-    "ecruteak_gym": ["morty"],
-    "cianwood_gym": ["chuck"],
-    "olivine_gym": ["jasmine"],
-    "mahogany_gym": ["pryce"],
-    "blackthorn_gym": ["clair"],
-    "pewter_gym": ["brock"],
-    "cerulean_gym": ["misty"],
-    "vermilion_gym": ["lt_surge"],
-    "celadon_gym": ["erika"],
-    "saffron_gym": ["sabrina"],
-    "fuchsia_gym": ["janine"],
-    "cinnabar_gym": ["blaine"],
-    "viridian_gym": ["blue"]
-  },
   "standaloneLocations": [
     "new_bark_town",
     "cherrygrove_city",
-    "violet_city",
-    "azalea_town",
-    "goldenrod_city",
-    "ecruteak_city",
-    "olivine_city",
-    "mahogany_town",
-    "blackthorn_city",
     "pallet_town",
-    "viridian_city",
-    "pewter_city",
-    "cerulean_city",
-    "vermilion_city",
-    "celadon_city",
     "lavender_town",
-    "saffron_city",
-    "fuchsia_city",
-    "cinnabar_island",
     "shamouti_island",
     "valencia_island",
     "route_1",
