--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "optimize": "npm run create-manifests && npm run compress-data",
     "create-manifests": "ts-node scripts/create-manifests.ts",
     "compress-data": "ts-node scripts/compress-pokemon-data.ts",
-    "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && npm run process-sprites && sh scripts/copy-dex-files.sh",
+    "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && npm run process-sprites && sh scripts/copy-dex-files.sh & npx tsx migrate-locations.ts",
     "crop": "ts-node scripts/crop_top_sprite.ts",
     "process-sprites": "python process_sprites.py --all",
     "process-pokemon": "python process_sprites.py --pokemon",
