Refactor import statements in page.tsx for better readability

--- a/location-consolidation-mapping.json
+++ b/location-consolidation-mapping.json
@@ -1,63 +1,10 @@
 {
   "consolidationGroups": {
-    "violet_city": [
-      "violet_gym"
-    ],
-    "azalea_town": [
-      "azalea_gym",
-      "azalea_mart"
-    ],
+    "violet_city": ["violet_gym", "violet_pokecenter_1f"],
+    "azalea_town": ["azalea_gym", "azalea_mart", "azalea_pokecenter_1f"],
     "goldenrod_city": [
-      "goldenrod_gym"
-    ],
-    "ecruteak_city": [
-      "ecruteak_gym"
-    ],
-    "cianwood_city": [
-      "cianwood_gym"
-    ],
-    "olivine_city": [
-      "olivine_gym"
-    ],
-    "mahogany_town": [
-      "mahogany_gym"
-    ],
-    "blackthorn_city": [
-      "blackthorn_gym"
-    ],
-    "pewter_city": [
-      "pewter_gym"
-    ],
-    "cerulean_city": [
-      "cerulean_gym"
-    ],
-    "vermilion_city": [
-      "vermilion_gym"
-    ],
-    "celadon_city": [
-      "celadon_gym"
-    ],
-    "saffron_city": [
-      "saffron_gym"
-    ],
-    "fuchsia_city": [
-      "fuchsia_gym"
-    ],
-    "cinnabar_island": [
-      "cinnabar_gym"
-    ],
-    "viridian_city": [
-      "viridian_gym"
-    ],
-    "celadon_dept_store": [
-      "celadon_dept_store_1f",
-      "celadon_dept_store_2f",
-      "celadon_dept_store_3f",
-      "celadon_dept_store_4f",
-      "celadon_dept_store_5f",
-      "celadon_dept_store_6f"
-    ],
-    "goldenrod_dept_store": [
+      "goldenrod_gym",
+      "goldenrod_mart",
       "goldenrod_dept_store_1f",
       "goldenrod_dept_store_2f",
       "goldenrod_dept_store_3f",
@@ -67,25 +14,43 @@
       "goldenrod_dept_store_b_1f",
       "goldenrod_dept_store_roof"
     ],
-    "celadon_hotel": [
+    "ecruteak_city": ["ecruteak_gym", "ecruteak_mart", "ecruteak_pokecenter_1f"],
+    "cianwood_city": ["cianwood_gym", "cianwood_mart", "cianwood_pokecenter_1f"],
+    "olivine_city": [
+      "olivine_gym",
+      "olivine_cafe",
+      "olivine_pokecenter_1f",
+      "olivine_tims_house",
+      "olivine_punishment_speech_house",
+      "olivine_good_rod_house",
+      "olivine_mart",
+      "olivine_lighthouse_1f",
+      "olivine_port",
+      "olivine_city_route_35_coast_dual"
+    ],
+    "mahogany_town": ["mahogany_gym", "mahogany_mart", "mahogany_pokecenter_1f"],
+    "blackthorn_city": [
+      "blackthorn_gym",
+      "blackthorn_gym_1f",
+      "blackthorn_gym_2f",
+      "blackthorn_poke_center_1f",
+      "blackthorn_poke_center_2f"
+    ],
+    "pewter_city": ["pewter_gym", "pewter_mart", "pewter_pokecenter_1f"],
+    "cerulean_city": ["cerulean_gym"],
+    "vermilion_city": ["vermilion_gym"],
+    "celadon_city": [
+      "celadon_gym",
+      "celadon_mart",
+      "celadon_pokecenter_1f",
+      "celadon_hotel",
       "celadon_hotel_1f",
       "celadon_hotel_2f",
       "celadon_hotel_pool",
       "celadon_hotel_room1",
       "celadon_hotel_room2",
-      "celadon_hotel_room3"
-    ],
-    "shamouti_hotel": [
-      "shamouti_hotel_1f",
-      "shamouti_hotel_2f",
-      "shamouti_hotel_3f",
-      "shamouti_hotel_restaurant",
-      "shamouti_hotel_room2_a",
-      "shamouti_hotel_room2_b",
-      "shamouti_hotel_room3_b",
-      "shamouti_hotel_room3_c"
-    ],
-    "celadon_university": [
+      "celadon_hotel_room3",
+      "celadon_university",
       "celadon_university_1f",
       "celadon_university_2f",
       "celadon_university_cafeteria",
@@ -103,6 +68,22 @@
       "celadon_university_westwoods_office",
       "celadon_university_willows_office"
     ],
+    "saffron_city": ["saffron_gym"],
+    "fuchsia_city": ["fuchsia_gym"],
+    "cinnabar_island": ["cinnabar_gym"],
+    "viridian_city": ["viridian_gym"],
+    "shamouti_hotel": [
+      "shamouti_hotel",
+      "shamouti_hotel_1f",
+      "shamouti_hotel_2f",
+      "shamouti_hotel_3f",
+      "shamouti_hotel_restaurant",
+      "shamouti_hotel_room2_a",
+      "shamouti_hotel_room2_b",
+      "shamouti_hotel_room3_b",
+      "shamouti_hotel_room3_c"
+    ],
+    "celadon_university": [],
     "battle_tower": [
       "battle_tower_1f",
       "battle_tower_2f",
@@ -138,38 +119,12 @@
       "lav_radio_tower_4f",
       "lav_radio_tower_5f"
     ],
-    "sprout_tower": [
-      "sprout_tower_1f",
-      "sprout_tower_2f",
-      "sprout_tower_3f"
-    ],
-    "burned_tower": [
-      "burned_tower_1f",
-      "burned_tower_b_1f"
-    ],
-    "cerulean_cave": [
-      "cerulean_cave_1f",
-      "cerulean_cave_2f",
-      "cerulean_cave_b_1f"
-    ],
-    "dim_cave": [
-      "dim_cave_1f",
-      "dim_cave_2f",
-      "dim_cave_3f",
-      "dim_cave_4f",
-      "dim_cave_5f"
-    ],
-    "quiet_cave": [
-      "quiet_cave_1f",
-      "quiet_cave_b_1f",
-      "quiet_cave_b_2f",
-      "quiet_cave_b_3f"
-    ],
-    "scary_cave": [
-      "scary_cave_1f",
-      "scary_cave_b_1f",
-      "scary_cave_shipwreck"
-    ],
+    "sprout_tower": ["sprout_tower_1f", "sprout_tower_2f", "sprout_tower_3f"],
+    "burned_tower": ["burned_tower_1f", "burned_tower_b_1f"],
+    "cerulean_cave": ["cerulean_cave_1f", "cerulean_cave_2f", "cerulean_cave_b_1f"],
+    "dim_cave": ["dim_cave_1f", "dim_cave_2f", "dim_cave_3f", "dim_cave_4f", "dim_cave_5f"],
+    "quiet_cave": ["quiet_cave_1f", "quiet_cave_b_1f", "quiet_cave_b_2f", "quiet_cave_b_3f"],
+    "scary_cave": ["scary_cave_1f", "scary_cave_b_1f", "scary_cave_shipwreck"],
     "union_cave": [
       "union_cave_1f",
       "union_cave_b_1f_north",
@@ -195,21 +150,9 @@
       "lances_room",
       "wills_room"
     ],
-    "route_10": [
-      "route_10_north",
-      "route_10_south",
-      "route_10_poke_center_1f"
-    ],
-    "route_12": [
-      "route_12_north",
-      "route_12_south",
-      "route_12_gate",
-      "route_12_super_rod_house"
-    ],
-    "route_13": [
-      "route_13_east",
-      "route_13_west"
-    ],
+    "route_10": ["route_10_north", "route_10_south", "route_10_poke_center_1f"],
+    "route_12": ["route_12_north", "route_12_south", "route_12_gate", "route_12_super_rod_house"],
+    "route_13": ["route_13_east", "route_13_west"],
     "route_16": [
       "route_16_northeast",
       "route_16_northwest",
@@ -218,21 +161,14 @@
       "route_16_gate",
       "route_16_fuchsia_speech_house"
     ],
-    "route_18": [
-      "route_18_east",
-      "route_18_west",
-      "route_18_gate"
-    ],
+    "route_18": ["route_18_east", "route_18_west", "route_18_gate"],
     "route_32": [
       "route_32_coast",
       "route_32_coast_house",
       "route_32_poke_center_1f",
       "route_32_ruins_of_alph_gate"
     ],
-    "route_34": [
-      "route_34_coast",
-      "route_34_ilex_forest_gate"
-    ],
+    "route_34": ["route_34_coast", "route_34_ilex_forest_gate"],
     "route_35": [
       "route_35_coast",
       "route_35_coast_north",
@@ -240,15 +176,8 @@
       "route_35_goldenrod_gate",
       "route_35_national_park_gate"
     ],
-    "rugged_road": [
-      "rugged_road_north",
-      "rugged_road_south",
-      "route_39_rugged_road_gate"
-    ],
-    "dark_cave": [
-      "dark_cave_blackthorn_entrance",
-      "dark_cave_violet_entrance"
-    ],
+    "rugged_road": ["rugged_road_north", "rugged_road_south", "route_39_rugged_road_gate"],
+    "dark_cave": ["dark_cave_blackthorn_entrance", "dark_cave_violet_entrance"],
     "ice_path": [
       "ice_path_1f",
       "ice_path_b_1f",
@@ -256,11 +185,7 @@
       "ice_path_b_2f_mahogany_side",
       "ice_path_b_3f"
     ],
-    "slowpoke_well": [
-      "slowpoke_well_entrance",
-      "slowpoke_well_b_1f",
-      "slowpoke_well_b_2f"
-    ],
+    "slowpoke_well": ["slowpoke_well_entrance", "slowpoke_well_b_1f", "slowpoke_well_b_2f"],
     "mount_mortar": [
       "mount_mortar_1f_inside",
       "mount_mortar_1f_outside",
@@ -284,32 +209,16 @@
       "seafoam_islands_b_3f",
       "seafoam_islands_b_4f"
     ],
-    "rock_tunnel": [
-      "rock_tunnel_1f",
-      "rock_tunnel_2f",
-      "rock_tunnel_b_1f"
-    ],
-    "victory_road": [
-      "victory_road_1f",
-      "victory_road_2f",
-      "victory_road_3f"
-    ],
-    "team_rocket_base": [
-      "team_rocket_base_b_1f",
-      "team_rocket_base_b_2f",
-      "team_rocket_base_b_3f"
-    ],
+    "rock_tunnel": ["rock_tunnel_1f", "rock_tunnel_2f", "rock_tunnel_b_1f"],
+    "victory_road": ["victory_road_1f", "victory_road_2f", "victory_road_3f"],
+    "team_rocket_base": ["team_rocket_base_b_1f", "team_rocket_base_b_2f", "team_rocket_base_b_3f"],
     "rocket_hideout": [
       "rocket_hideout_b_1f",
       "rocket_hideout_b_2f",
       "rocket_hideout_b_3f",
       "rocket_hideout_b_4f"
     ],
-    "cinnabar_volcano": [
-      "cinnabar_volcano_1f",
-      "cinnabar_volcano_b_1f",
-      "cinnabar_volcano_b_2f"
-    ],
+    "cinnabar_volcano": ["cinnabar_volcano_1f", "cinnabar_volcano_b_1f", "cinnabar_volcano_b_2f"],
     "mount_moon": [
       "mount_moon_1f",
       "mount_moon_b_1f",
@@ -317,10 +226,7 @@
       "mount_moon_gift_shop",
       "mount_moon_square"
     ],
-    "pokemon_mansion": [
-      "pokemon_mansion_1f",
-      "pokemon_mansion_b_1f"
-    ],
+    "pokemon_mansion": ["pokemon_mansion_1f", "pokemon_mansion_b_1f"],
     "celadon_mansion": [
       "celadon_mansion_1f",
       "celadon_mansion_2f",
@@ -328,34 +234,17 @@
       "celadon_mansion_roof",
       "celadon_mansion_roof_house"
     ],
-    "soul_house": [
-      "soul_house_b_1f",
-      "soul_house_b_2f",
-      "soul_house_b_3f"
-    ],
+    "soul_house": ["soul_house_b_1f", "soul_house_b_2f", "soul_house_b_3f"],
     "snowtop_mountain": [
       "snowtop_mountain_inside",
       "snowtop_mountain_outside",
       "snowtop_poke_center_1f"
     ],
-    "magnet_tunnel": [
-      "magnet_tunnel_east",
-      "magnet_tunnel_inside",
-      "magnet_tunnel_west"
-    ],
-    "uraga_channel": [
-      "uraga_channel_east",
-      "uraga_channel_west"
-    ],
-    "route_2": [
-      "route_2_north",
-      "route_2_south",
-      "route_2_gate",
-      "route_2_nugget_speech_house"
-    ]
+    "magnet_tunnel": ["magnet_tunnel_east", "magnet_tunnel_inside", "magnet_tunnel_west"],
+    "uraga_channel": ["uraga_channel_east", "uraga_channel_west"],
+    "route_2": ["route_2_north", "route_2_south", "route_2_gate", "route_2_nugget_speech_house"]
   },
   "standaloneLocations": [
-    "new_bark_town",
     "cherrygrove_city",
     "pallet_town",
     "lavender_town",
@@ -418,9 +307,5 @@
     "navel_rock",
     "faraway_island"
   ],
-  "deleteLocations": [
-    "route",
-    "mt_moon",
-    "mt_mortar"
-  ]
+  "deleteLocations": ["route", "mt_moon", "mt_mortar"]
 }
