--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node scripts/generate-build-info.mjs && node scripts/smart-sprite-build.ts && ./scripts/copy-dex-files.sh && next build",
+    "build": "node scripts/generate-build-info.mjs && ts-node scripts/smart-sprite-build.ts && ./scripts/copy-dex-files.sh && next build",
     "build-full": "node scripts/generate-build-info.mjs && npm run process-sprites && ./scripts/copy-dex-files.sh && next build",
     "start": "next start",
     "lint": "next lint",
