--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node scripts/generate-build-info.mjs && tsx scripts/smart-sprite-build.ts && ./scripts/copy-dex-files.sh && next build",
-    "build-full": "node scripts/generate-build-info.mjs && npm run process-sprites && ./scripts/copy-dex-files.sh && next build",
+    "build": "node scripts/generate-build-info.mjs && tsx scripts/smart-sprite-build.ts && tsx scripts/create-manifests.ts && ./scripts/copy-dex-files.sh && next build",
+    "build-full": "node scripts/generate-build-info.mjs && npm run process-sprites && tsx scripts/create-manifests.ts && ./scripts/copy-dex-files.sh && next build",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
