Fix Pokémon data compression and move extraction handling
- Updated `compress-pokemon-data.ts` to derive Pokémon names from filenames instead of relying on potentially missing `data.name`.
- Enhanced `moveExtractors.ts` to handle various cases for the "Psychic" move, ensuring consistent mapping and description retrieval.
- Added special case mappings for "Psychic" in `stringNormalizer.ts` to accommodate different naming conventions.

--- a/output/locations/route_13_east.json
+++ b/output/locations/route_13_east.json
@@ -129,7 +129,7 @@
           "species": "Hypno",
           "moves": [
             "Nasty Plot",
-            "Psychic M",
+            "Psychic",
             "Swagger",
             "Zen Headbutt"
           ],
@@ -157,7 +157,7 @@
             "Future Sight",
             "Confuse Ray",
             "Calm Mind",
-            "Psychic M"
+            "Psychic"
           ],
           "faithful": {},
           "polished": {}
@@ -167,7 +167,7 @@
           "species": "Golduck",
           "gender": "male",
           "moves": [
-            "Psychic M",
+            "Psychic",
             "Nasty Plot",
             "Hydro Pump",
             "Amnesia"
@@ -193,7 +193,7 @@
           "species": "Golduck",
           "gender": "male",
           "moves": [
-            "Psychic M",
+            "Psychic",
             "Nasty Plot",
             "Hydro Pump",
             "Amnesia"
@@ -209,7 +209,7 @@
             "Future Sight",
             "Confuse Ray",
             "Calm Mind",
-            "Psychic M"
+            "Psychic"
           ],
           "faithful": {},
           "polished": {}
@@ -247,7 +247,7 @@
           "moves": [
             "Belly Drum",
             "Rain Dance",
-            "Psychic M",
+            "Psychic",
             "Swagger"
           ],
           "faithful": {},
