--- a/output/locations/uraga_channel_east.json
+++ b/output/locations/uraga_channel_east.json
@@ -78,7 +78,7 @@
           "level": 52,
           "species": "Hypno",
           "moves": [
-            "Psychic M",
+            "Psychic",
             "Swagger",
             "Zen Headbutt",
             "Belly Drum"
