Update item parameters, add new Pokémon sprites, and modify evolution chain text
- Changed parameters for several held items in items.json to reflect new effects.
- Added sprite entries for Arbok and Dudunsparce in sprite_manifest.json.
- Included a new cropped sprite image for Dudunsparce.
- Updated the evolution chain component to change the label from "Location:" to "Level up at:" for clarity.

--- a/public/sprite_manifest.json
+++ b/public/sprite_manifest.json
@@ -154,6 +154,16 @@
         "width": 56
       }
     },
+    "arbok": {
+      "normal_animated": null,
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": null,
+      "shiny_front": null
+    },
     "arcanine": {
       "normal_animated": {
         "height": 56,
@@ -1209,6 +1219,16 @@
         "url": "sprites/pokemon/drowzee/shiny_front.png",
         "width": 48
       }
+    },
+    "dudunsparce": {
+      "normal_animated": null,
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": null,
+      "shiny_front": null
     },
     "dugtrio": {
       "normal_animated": {
