--- a/public/sprite_manifest.json
+++ b/public/sprite_manifest.json
@@ -155,13 +155,21 @@
       }
     },
     "arbok": {
-      "normal_animated": null,
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok/normal_front_animated.gif",
+        "width": 56
+      },
       "normal_front": {
         "height": 56,
         "url": "sprites/pokemon/arbok/normal_front.png",
         "width": 56
       },
-      "shiny_animated": null,
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok/shiny_front_animated.gif",
+        "width": 56
+      },
       "shiny_front": null
     },
     "arbok_agatha": {
@@ -1417,16 +1425,6 @@
         "url": "sprites/pokemon/drowzee/shiny_front.png",
         "width": 48
       }
-    },
-    "dudunsparce": {
-      "normal_animated": null,
-      "normal_front": {
-        "height": 56,
-        "url": "sprites/pokemon/dudunsparce/normal_front.png",
-        "width": 56
-      },
-      "shiny_animated": null,
-      "shiny_front": null
     },
     "dugtrio": {
       "normal_animated": {
