feat: add static PNG support for Arbok and Dudunsparce, update sprite manifest, and enhance form visibility in UI

--- a/public/sprite_manifest.json
+++ b/public/sprite_manifest.json
@@ -170,7 +170,11 @@
         "url": "sprites/pokemon/arbok/shiny_front_animated.gif",
         "width": 56
       },
-      "shiny_front": null
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/arbok/shiny_front.png",
+        "width": 56
+      }
     },
     "arbok_agatha": {
       "normal_animated": {
@@ -1424,6 +1428,28 @@
         "height": 48,
         "url": "sprites/pokemon/drowzee/shiny_front.png",
         "width": 48
+      }
+    },
+    "dudunsparce": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/dudunsparce/shiny_front.png",
+        "width": 56
       }
     },
     "dugtrio": {
