--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -20,12 +20,14 @@
   "cSpell.words": [
     "ALOLAN",
     "Alph",
+    "ARBOK",
     "evos",
     "galar",
     "hisui",
     "Hisuian",
     "IVYSAUR",
     "johto",
+    "KANTO",
     "Meowth",
     "NIDOQUEEN",
     "oklch",
