refactor: update Pikachu sprite mappings and add new variants

--- a/public/sprite_manifest.json
+++ b/public/sprite_manifest.json
@@ -5896,28 +5896,6 @@
         "width": 40
       }
     },
-    "pikachu_chuchu": {
-      "normal_animated": {
-        "height": 56,
-        "url": "sprites/pokemon/pikachu_chuchu/normal_front_animated.gif",
-        "width": 56
-      },
-      "normal_front": {
-        "height": 56,
-        "url": "sprites/pokemon/pikachu_chuchu/normal_front.png",
-        "width": 56
-      },
-      "shiny_animated": {
-        "height": 56,
-        "url": "sprites/pokemon/pikachu_chuchu/shiny_front_animated.gif",
-        "width": 56
-      },
-      "shiny_front": {
-        "height": 56,
-        "url": "sprites/pokemon/pikachu_chuchu/shiny_front.png",
-        "width": 56
-      }
-    },
     "pikachu_fly": {
       "normal_animated": {
         "height": 56,
@@ -5937,28 +5915,6 @@
       "shiny_front": {
         "height": 56,
         "url": "sprites/pokemon/pikachu_fly/shiny_front.png",
-        "width": 56
-      }
-    },
-    "pikachu_pika": {
-      "normal_animated": {
-        "height": 56,
-        "url": "sprites/pokemon/pikachu_pika/normal_front_animated.gif",
-        "width": 56
-      },
-      "normal_front": {
-        "height": 56,
-        "url": "sprites/pokemon/pikachu_pika/normal_front.png",
-        "width": 56
-      },
-      "shiny_animated": {
-        "height": 56,
-        "url": "sprites/pokemon/pikachu_pika/shiny_front_animated.gif",
-        "width": 56
-      },
-      "shiny_front": {
-        "height": 56,
-        "url": "sprites/pokemon/pikachu_pika/shiny_front.png",
         "width": 56
       }
     },
@@ -5982,6 +5938,28 @@
         "height": 40,
         "url": "sprites/pokemon/pikachu_plain/shiny_front.png",
         "width": 40
+      }
+    },
+    "pikachu_red": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_red/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_red/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_red/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_red/shiny_front.png",
+        "width": 56
       }
     },
     "pikachu_spark": {
@@ -6025,6 +6003,28 @@
       "shiny_front": {
         "height": 56,
         "url": "sprites/pokemon/pikachu_surf/shiny_front.png",
+        "width": 56
+      }
+    },
+    "pikachu_yellow": {
+      "normal_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_yellow/normal_front_animated.gif",
+        "width": 56
+      },
+      "normal_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_yellow/normal_front.png",
+        "width": 56
+      },
+      "shiny_animated": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_yellow/shiny_front_animated.gif",
+        "width": 56
+      },
+      "shiny_front": {
+        "height": 56,
+        "url": "sprites/pokemon/pikachu_yellow/shiny_front.png",
         "width": 56
       }
     },
