--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toggle": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/leaflet": "^1.9.20",
     "@vercel/analytics": "^1.5.0",
@@ -51,6 +52,7 @@
     "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "next": "15.3.5",
     "next-themes": "^0.4.6",
     "nuqs": "^2.4.3",
