--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "extract-rival": "ts-node extract_rival.ts",
     "generate-individual-files": "npx tsx scripts/generate-individual-pokemon-files.ts",
     "optimize": "npm run generate-individual-files && npm run create-manifests && npm run compress-data",
-    "create-manifests": "ts-node scripts/create-manifests.ts",
+    "create-manifests": "ts-node scripts/create-manifests.ts && npx tsx scripts/create-locations-manifest.ts",
     "compress-data": "ts-node scripts/compress-pokemon-data.ts",
     "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && npm run process-sprites && sh scripts/copy-dex-files.sh && npm run generate-individual-files",
     "crop": "ts-node scripts/crop_top_sprite.ts",
