--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "compress-data": "ts-node scripts/compress-pokemon-data.ts",
     "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && npm run process-sprites && sh scripts/copy-dex-files.sh && npm run generate-individual-files",
     "crop": "ts-node scripts/crop_top_sprite.ts",
-    "process-sprites": "python process_sprites.py --all",
-    "process-pokemon": "python process_sprites.py --pokemon",
-    "process-trainers": "python process_sprites.py --trainers",
+    "process-sprites": "python3 process_sprites.py --all",
+    "process-pokemon": "python3 process_sprites.py --pokemon",
+    "process-trainers": "python3 process_sprites.py --trainers",
     "update-rom": "cd polishedcrystal && git pull origin master && cd ..",
     "test": "vitest run",
     "test:watch": "vitest",
