Refactor Pokémon abilities and stats
- Updated abilities for various Pokémon including Rattata, Sandshrew, Sandslash, Slowbro, Slowking, Slowpoke, Sneasel, Typhlosion, Uraluna, Vulpix, Weezing, Wooper, and Zapdos to reflect new descriptions and IDs.
- Adjusted held items for Sneasel and other Pokémon.
- Enhanced the generation of individual Pokémon files to include form-specific detailed stats.
- Introduced a new TypeScript configuration for scripts.
- Added GroupedTrainer interface to manage trainer groupings effectively.
- Improved form extraction logic to handle special cases and ensure accurate base Pokémon names.
- Enhanced detailed stats extraction with additional logging for debugging purposes.

--- a/package.json
+++ b/package.json
@@ -5,20 +5,20 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "node scripts/generate-build-info.mjs & tsx scripts/smart-sprite-build.ts & ((tsx scripts/create-manifests.ts && ./scripts/copy-dex-files.sh) && next build)",
-    "build-full": "node scripts/generate-build-info.mjs & npm run process-sprites & ((tsx scripts/create-manifests.ts && ./scripts/copy-dex-files.sh) && next build)",
+    "build": "node scripts/generate-build-info.mjs & tsx --tsconfig scripts/tsconfig.json scripts/smart-sprite-build.ts & ((tsx --tsconfig scripts/tsconfig.json scripts/create-manifests.ts && ./scripts/copy-dex-files.sh) && next build)",
+    "build-full": "node scripts/generate-build-info.mjs & npm run process-sprites & ((tsx --tsconfig scripts/tsconfig.json scripts/create-manifests.ts && ./scripts/copy-dex-files.sh) && next build)",
     "start": "next start",
     "lint": "next lint",
     "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "format:check": "prettier --check \"src/**/*.{js,jsx,ts,tsx,json,css,md}\"",
     "extract": "ts-node extract_pokemon_data.ts && ts-node extract_locations.ts",
     "extract-rival": "ts-node extract_rival.ts",
-    "generate-individual-files": "npx tsx scripts/generate-individual-pokemon-files.ts",
+    "generate-individual-files": "npx tsx --tsconfig scripts/tsconfig.json scripts/generate-individual-pokemon-files.ts",
     "optimize": "npm run generate-individual-files && npm run create-manifests && npm run compress-data",
-    "create-manifests": "ts-node scripts/create-manifests.ts && npx tsx scripts/create-locations-manifest.ts",
-    "compress-data": "ts-node scripts/compress-pokemon-data.ts",
-    "do-the-thing": "npm run extract && npm run optimize && npx tsx restructure_locations.ts && npm run process-sprites && sh scripts/copy-dex-files.sh && npm run generate-individual-files",
-    "crop": "ts-node scripts/crop_top_sprite.ts",
+    "create-manifests": "ts-node --project scripts/tsconfig.json scripts/create-manifests.ts && npx tsx --tsconfig scripts/tsconfig.json scripts/create-locations-manifest.ts",
+    "compress-data": "ts-node --project scripts/tsconfig.json scripts/compress-pokemon-data.ts",
+    "do-the-thing": "npm run extract && npm run optimize && npx tsx --tsconfig scripts/tsconfig.json restructure_locations.ts && npm run process-sprites && sh scripts/copy-dex-files.sh && npm run generate-individual-files",
+    "crop": "ts-node --project scripts/tsconfig.json scripts/crop_top_sprite.ts",
     "process-sprites": "python3 process_sprites.py --all",
     "process-pokemon": "python3 process_sprites.py --pokemon",
     "process-trainers": "python3 process_sprites.py --trainers",
