--- a/public/output/pokemon/sneasel.json
+++ b/public/output/pokemon/sneasel.json
@@ -2800,7 +2800,7 @@
       "baseExp": 132,
       "heldItems": [
         "GRIP_CLAW",
-        "RAZOR_CLAW"
+        "QUICK_CLAW"
       ],
       "genderRatio": {
         "male": 50,
