--- a/output/pokemon/sneasel.json
+++ b/output/pokemon/sneasel.json
@@ -2846,7 +2846,7 @@
       "baseExp": 132,
       "heldItems": [
         "GRIP_CLAW",
-        "RAZOR_CLAW"
+        "QUICK_CLAW"
       ],
       "genderRatio": {
         "male": 50,
