Refactor Pokémon data: Consolidate forms, update egg and TM/HM moves, and clean up variant definitions
- Updated Weedle JSON to include empty eggMoves and tmHmMoves arrays.
- Simplified forms for several Pokémon in detailed stats JSON, retaining only the 'plain' form.
- Adjusted create-manifests script to handle Arbok's forms correctly by using the first form as primary.
- Modified generate-individual-pokemon-files script to always assign eggMoves and tmHmMoves to 'plain' form.
- Cleaned up Pokémon variants data by commenting out cosmetic forms and retaining only necessary variants.

--- a/output/pokemon/sneasler.json
+++ b/output/pokemon/sneasler.json
@@ -914,6 +914,7 @@
         "Field"
       ],
       "evYield": "1 Atk",
+      "eggMoves": [],
       "tmHmMoves": [
         {
           "name": "Dynamicpunch",
