--- a/public/output/pokemon/sneasler.json
+++ b/public/output/pokemon/sneasler.json
@@ -914,6 +914,7 @@
         "Field"
       ],
       "evYield": "1 Atk",
+      "eggMoves": [],
       "tmHmMoves": [
         {
           "name": "Dynamicpunch",
