Update build info and modify Pokémon forms
- Updated build date and git commit date in build-info.json.
- Simplified Pokémon forms in pokemon.json by retaining only the "plain" form for several Pokémon.
- Removed console log statement in location-client.tsx for cleaner code.
- Changed TrainerPokemon interface to allow level to be a string or number.
- Updated getMostRecentMoves function to handle level as a string or number, with default handling for badge-based levels.
- Adjusted trainerGrouping.ts to convert badge levels to numbers for level comparison.

--- a/output/locations/safari_zone_east.json
+++ b/output/locations/safari_zone_east.json
@@ -38,7 +38,7 @@
       },
       "pokemon": [
         {
-          "level": 26,
+          "level": "Badge Level +6",
           "species": "Tauros",
           "moves": [
             "Quick Attack",
@@ -50,7 +50,7 @@
           "polished": {}
         },
         {
-          "level": 27,
+          "level": "Badge Level +7",
           "species": "Tauros",
           "form": "paldean form",
           "moves": [
@@ -63,7 +63,7 @@
           "polished": {}
         },
         {
-          "level": 28,
+          "level": "Badge Level +8",
           "species": "Tauros",
           "form": "tauros paldean fire form",
           "moves": [
@@ -76,14 +76,14 @@
           "polished": {}
         },
         {
-          "level": 29,
+          "level": "Badge Level +9",
           "species": "Tauros",
           "form": "tauros paldean water form",
           "moves": [
-            "Focus Energy",
             "Quick Attack",
             "Rest",
-            "Pursuit"
+            "Pursuit",
+            "Scary Face"
           ],
           "faithful": {},
           "polished": {}
