after running extract

--- a/new/pokemon/sneasel.json
+++ b/new/pokemon/sneasel.json
@@ -97,7 +97,15 @@
               "sleeptalk",
               "swagger"
             ],
-            "eggMoves": []
+            "eggMoves": [
+              "bite",
+              "foresight",
+              "pursuit",
+              "counter",
+              "reflect",
+              "iciclecrash",
+              "iceshard"
+            ]
           }
         },
         "hisuian": {
@@ -188,7 +196,15 @@
               "sleeptalk",
               "swagger"
             ],
-            "eggMoves": []
+            "eggMoves": [
+              "bite",
+              "foresight",
+              "pursuit",
+              "counter",
+              "reflect",
+              "iciclecrash",
+              "iceshard"
+            ]
           }
         }
       }
@@ -287,7 +303,15 @@
               "sleeptalk",
               "swagger"
             ],
-            "eggMoves": []
+            "eggMoves": [
+              "bite",
+              "foresight",
+              "pursuit",
+              "counter",
+              "reflect",
+              "iciclecrash",
+              "iceshard"
+            ]
           }
         },
         "hisuian": {
@@ -378,7 +402,15 @@
               "sleeptalk",
               "swagger"
             ],
-            "eggMoves": []
+            "eggMoves": [
+              "bite",
+              "foresight",
+              "pursuit",
+              "counter",
+              "reflect",
+              "iciclecrash",
+              "iceshard"
+            ]
           }
         }
       }
